# accel-deform-registration

./: .gitignore  LICENSE  README.md  pyproject.toml
accel_deform_registration/: __init__.py  comparison.py  diffeomorphic.py  ffd_2d.py  ffd_3d.py  ffd_common.py  losses.py  phantoms.py  pyramid.py
data/: README.md
data/octa/: README.md
examples/: demo_2d_mip.py  demo_3d_pyramid.py  quick_test.py
scripts/: download_octa_data.py
src/: ffd_2d.py  ffd_3d.py
tests/: __init__.py  run_tests.py  test_diffeomorphic.py  test_losses.py  test_octa.py  test_output_utils.py  test_registration_2d.py  test_registration_3d.py
tests/data/octa/: README.md
